finally fixed profile photo stretching

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2168,7 +2168,7 @@ input, select, textarea {
 		}
 
 /* Icon */
-
+	
 	.icon {
 		text-decoration: none;
 		border-bottom: none;
@@ -2306,7 +2306,6 @@ input, select, textarea {
 
 		.image.avatar {
 			border-radius: 100%;
-			height: 224px;
 			width: 200px;
 		}
 
